Bug 1711057 - Consider programmatic focus during keyboard input as key focus. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D115137