dom/html/HTMLLegendElement.cpp
@@ -67,7 +67,7 @@ void HTMLLegendElement::UnbindFromTree(bool aNullParent) {
 }
 
 void HTMLLegendElement::Focus(const FocusOptions& aOptions,
-                              const mozilla::dom::CallerType aCallerType,
+                              const CallerType aCallerType,
                               ErrorResult& aError) {
   nsIFrame* frame = GetPrimaryFrame();
   if (!frame) {
@@ -87,11 +87,10 @@ void HTMLLegendElement::Focus(const FocusOptions& aOptions,
   }
 
   RefPtr<Element> result;
-  aError = fm->MoveFocus(
-      nullptr, this, nsIFocusManager::MOVEFOCUS_FORWARD,
-      nsIFocusManager::FLAG_NOPARENTFRAME |
-          nsFocusManager::FocusOptionsToFocusManagerFlags(aOptions),
-      getter_AddRefs(result));
+  aError = fm->MoveFocus(nullptr, this, nsIFocusManager::MOVEFOCUS_FORWARD,
+                         nsIFocusManager::FLAG_NOPARENTFRAME |
+                             nsFocusManager::ProgrammaticFocusFlags(aOptions),
+                         getter_AddRefs(result));
 }
 
 bool HTMLLegendElement::PerformAccesskey(bool aKeyCausesActivation,
